--- a/tdd-csharp-tutorial.Tests/tdd-csharp-tutorial.Tests.csproj
+++ b/tdd-csharp-tutorial.Tests/tdd-csharp-tutorial.Tests.csproj
@@ -101,6 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Functional\FunctionalBase.cs" />
+    <Compile Include="Functional\IndexFunctionalTests.cs" />
     <Compile Include="Functional\Pages\PageBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
