--- a/tdd-csharp-tutorial.Tests/tdd-csharp-tutorial.Tests.csproj
+++ b/tdd-csharp-tutorial.Tests/tdd-csharp-tutorial.Tests.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Functional\IndexFunctionalTests.cs" />
     <Compile Include="Functional\Pages\PageBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Unit\Controllers\HomeControllerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
