--- a/tdd-csharp-tutorial.Tests/tdd-csharp-tutorial.Tests.csproj
+++ b/tdd-csharp-tutorial.Tests/tdd-csharp-tutorial.Tests.csproj
@@ -100,8 +100,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Functional\AdditionFunctionalTests.cs" />
     <Compile Include="Functional\FunctionalBase.cs" />
     <Compile Include="Functional\IndexFunctionalTests.cs" />
+    <Compile Include="Functional\Pages\AdditionPage.cs" />
     <Compile Include="Functional\Pages\PageBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Unit\Controllers\HomeControllerTests.cs" />
@@ -114,6 +116,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="TestData\AdditionData.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\tdd-csharp-tutorial\tdd-csharp-tutorial.csproj">
