--- a/tdd-csharp-tutorial.Tests/tdd-csharp-tutorial.Tests.csproj
+++ b/tdd-csharp-tutorial.Tests/tdd-csharp-tutorial.Tests.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Functional\Pages\AdditionPage.cs" />
     <Compile Include="Functional\Pages\PageBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Unit\Controllers\AdditionControllerTests.cs" />
     <Compile Include="Unit\Controllers\HomeControllerTests.cs" />
   </ItemGroup>
   <ItemGroup>
